--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>my first website</h2>
+    <h2>my first webgsite</h2>
     <h1>hello world</h1>
+    <img src="nahid.jpg" alt="">
 </body>
 </html>
