learning about second branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h2>my first webgsite</h2>
     <h1>hello world</h1>
+    <p>talking from the second branch</p>
+    <p>this line addeded in my second branch</p>
     <img src="nahid.jpg" alt="">
 </body>
 </html>
