adding more code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>hello world</h1>
     <p>talking from the second branch</p>
     <p>this line addeded in my second branch</p>
+    <p>add more staff in second branch</p>
     <img src="nahid.jpg" alt="">
 </body>
 </html>
